--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <button></button>
-            <a href="">enviar</a>
+            <a href="./pages/agradecimento.html">enviar</a>
     </div>
 </body>
 </html>
